<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--
 https://stackoverflow.com/questions/2361497/how-to-create-edittext-accepts-alphabets-only-in-android/35954993
 -->


    <!-- Kilde til billede https://www.flaticon.com/free-icon/wheel-of-fortune_2006249 -->

    <ImageView
        android:id="@+id/spinBackdrop"
        android:layout_width="283dp"
        android:layout_height="288dp"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:background="@drawable/wheel_of_fortune"
        app:layout_constraintBottom_toBottomOf="@+id/spinKnap"
        app:layout_constraintEnd_toEndOf="@+id/spinKnap"
        app:layout_constraintStart_toStartOf="@+id/spinKnap"
        app:layout_constraintTop_toTopOf="@+id/spinKnap"
        app:layout_constraintVertical_bias="0.537" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/spinKnap"
        android:layout_width="121dp"
        android:layout_height="48dp"
        android:background="@drawable/gradient_knap_blaa"
        android:fontFamily="@font/scope_one"
        android:text="@string/spin_hjullet"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59" />

    <TextView
        android:id="@+id/spinResul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/placeholder"
        android:textColor="#000000"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/spinKnap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.149" />

    <TextView
        android:id="@+id/hp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/hp_placeholder"
        android:textColor="#455A64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/point_placeholder"
        android:textColor="#455A64"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>